<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heightEditText" android:hint="Height [cm]"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/weightEditText" android:hint="Weight [kg]"/>
    <Button
            android:text="Compute BMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/computeButton"/>
    <TextView
            android:text="Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/resultTextView" android:textSize="24sp"/>
</LinearLayout>